# discord-emotion-tracker

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.optimized  Dockerfile.optizime  README.md  config.sample.yaml  start_app.sh
src/: config.rs  config.sample.yaml  discord.rs  main.rs  mongo.rs  monitor.rs  scheduler.rs  sentiment.rs  translate.rs  util.rs
