[package]
name = "discord-emotion-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
mongodb = "2.4.0"
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
chrono = "0.4.24"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
aws-sdk-comprehend = "0.26.0"
aws-config = "0.55.1"
regex = "1.7"
cron = "0.12.0"
chrono-tz = { version = "0.8.2", features = [ "filter-by-regex" ] }
sysinfo = "0.28.4"